--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -112,24 +112,25 @@
 				</div></li>
 			<li class="nav-item"><a class="nav-link collapsed"
 				data-toggle="collapse" data-target="#collapsePay"
-				aria-expanded="true" aria-controls="collapsePayment"> <i
-					class="fas fa-fw fa-folder"></i> <span>그룹웨어</span>
+				aria-expanded="true" aria-controls="collapsePayment">
+				<i class="fas fa-fw fa-folder"></i>
+					<span>그룹웨어</span>
 			</a>
 				<div id="collapsePay" class="collapse"
 					aria-labelledby="headingPages" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">공지사항 메뉴:</h6>
 						<a class="collapse-item" th:href="@{/notice}">공지사항</a>
-						<!--                         <a class="collapse-item" th:href="@{/groupware/eNotice}">부서별 공지사항</a> -->
 						<h6 class="collapse-header">회사일정 메뉴:</h6>
 						<a class="collapse-item" th:href="@{/schedule}">일정관리</a>
-						<!--                     	<a class="collapse-item" th:href="@{/groupware/aSchedule}">전체 일정</a> -->
-						<!--                         <a class="collapse-item" th:href="@{/groupware/eSchedule}">부서별 일정</a> -->
 						<h6 class="collapse-header">공통문서 메뉴:</h6>
-						<a class="collapse-item" th:href="@{/groupware/document}">사내공통
-							문서양식관리</a>
+						<a class="collapse-item" th:href="@{/groupware/document}">사내공통 문서양식관리</a>
+						<h6 class="collapse-header">사내 메신저:</h6>
+						<a class="collapse-item" th:href="@{/chat}">사내 메신저</a>
+						
 					</div>
-				</div></li>
+				</div>
+			</li>
 
 			<!-- Divider -->
 			<hr class="sidebar-divider d-none d-md-block">
