--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -48,12 +48,15 @@
 	<script th:src="@{/bootstrap/js/sb-admin-2.min.js}"></script>
 	<script th:src="@{/bootstrap/js/demo/chart-area-demo.js}"></script>
 	<script th:src="@{/bootstrap/js/demo/chart-pie-demo.js}"></script>
+	<script th:src="@{/bootstrap/js/demo/chart-bar-demo.js}"></script>
+
 	<!-- 그룹웨어 관련 js -->
 	<script	th:src="@{https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js}"></script> <!-- 달력관련 js -->
 	<script th:src="@{/bootstrap/js/groupware/notice.js}"></script> <!-- 공지사항관련 js -->
 	<script th:src="@{/bootstrap/js/groupware/schedule.js}"></script> <!-- 일정관리관련 js -->
-
-	<script th:src="@{/bootstrap/js/demo/chart-bar-demo.js}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1.5.1/dist/sockjs.min.js"></script> <!-- 웹소켓 js -->
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script> <!-- 웹소켓 js -->
+	<script th:src="@{/bootstrap/js/groupware/chat.js}"></script> <!-- 사내메신저관련 js -->
 
 	<!-- 개별 페이지 자바스크립트 영역 -->
 	<th:block layout:fragment="script"></th:block>
