카테고리 분류창 없앰

--- a/bootstrap_stater/src/main/resources/templates/approval/approval_List.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/approval_List.html
@@ -118,30 +118,30 @@
                                     <input type="date" class="form-control" value="2025-08-12">
                                 </div>
                             </div>
-                            <div class="col-md-1">
-                                <select class="form-control">
-                                    <option selected>결재유형</option>
-                                    <option value="1">출장</option>
-                                    <option value="2">인사발령</option>
-                                    <option value="3">휴가</option>
-                                </select>
-                            </div>
-                            <div class="col-md-1">
-                                <select class="form-control">
-                                    <option selected>부서</option>
-                                    <option value="1">생산</option>
-                                    <option value="2">인사</option>
-                                    <option value="3">재무</option>
-                                </select>
-                            </div>
-                            <div class="col-md-1">
-                                <select class="form-control">
-                                    <option selected>직급</option>
-                                    <option value="1">사원</option>
-                                    <option value="2">주임</option>
-                                    <option value="3">대리</option>
-                                </select>
-                            </div>
+<!--                             <div class="col-md-1"> -->
+<!--                                 <select class="form-control"> -->
+<!--                                     <option selected>결재유형</option> -->
+<!--                                     <option value="1">출장</option> -->
+<!--                                     <option value="2">인사발령</option> -->
+<!--                                     <option value="3">휴가</option> -->
+<!--                                 </select> -->
+<!--                             </div> -->
+<!--                             <div class="col-md-1"> -->
+<!--                                 <select class="form-control"> -->
+<!--                                     <option selected>부서</option> -->
+<!--                                     <option value="1">생산</option> -->
+<!--                                     <option value="2">인사</option> -->
+<!--                                     <option value="3">재무</option> -->
+<!--                                 </select> -->
+<!--                             </div> -->
+<!--                             <div class="col-md-1"> -->
+<!--                                 <select class="form-control"> -->
+<!--                                     <option selected>직급</option> -->
+<!--                                     <option value="1">사원</option> -->
+<!--                                     <option value="2">주임</option> -->
+<!--                                     <option value="3">대리</option> -->
+<!--                                 </select> -->
+<!--                             </div> -->
                             <div class="col-md-3 ml-auto">
                                 <input type="text" class="form-control" id="drafterNameInput" placeholder="기안자 입력 후 검색">
                             </div>
