--- a/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
+++ b/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
@@ -12,6 +12,16 @@
 <body>
 <th:block layout:fragment="content">
   
+	<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+		<ul class="navbar-nav">
+			<li class="nav-item d-none d-sm-inline-block">
+				<a href="#" class="nav-btn active" id="erpBtn">ERP</a>
+			</li>
+			<li class="nav-item d-none d-sm-inline-block">
+				<a href="#" class="nav-btn" id="mesBtn">MES</a>
+			</li>
+		</ul>
+	</nav>	
 	
 	<div class="container-fluid">
 		<div class="row">
@@ -31,7 +41,7 @@
 								<input type="search" id="codeSearch" />
 							</div>
 						</div>
-						<div class="codeContainer" style="height:430px; overflow-y:auto;">
+						<div class="codeContainer" style="height:395px; overflow-y:auto;">
 							<div class="table-responsive">
 								<table id ="bigTable" class="table table-bordered">
 									<thead>
@@ -72,7 +82,7 @@
 							<input type="search" id="codeDetailSearch" />
 						</div>
 					 </div>
-                     <div class="card-body" id="detailArea" style="display:none; height:430px; overflow-y:auto;">
+                     <div class="card-body" id="detailArea" style="display:none; height:395px; overflow-y:auto;">
                      	<table id ="smallTable" class="table table-bordered">
 							<thead>
 								<tr>
