--- a/bootstrap_stater/src/main/resources/templates/commute/annual_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/annual_list.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://uicdn.toast.com/grid/latest/tui-grid.css" />
         <link rel="stylesheet" href="https://uicdn.toast.com/chart/latest/toastui-chart.min.css" />
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     </th:block>
 </head>
 <body>
@@ -23,9 +24,11 @@
 					<div class="card-header py-3 d-flex justify-content-between align-items-center" style="background-color: #f3f4f7;">
 						<h6 class="m-0 font-weight-bold">연차사용내역</h6>
 					</div>
-					<div id="chart-area"></div>
+					<div class="icon-wrapper">
+						<i class="fa-solid fa-circle-user annPerson"></i>
+					</div>
 					<div class="d-flex align-items-start">
-						<div class="card-body" id="MyAnnArea" style="height: 305px">
+						<div class="card-body" id="MyAnnArea" style="height: 293px">
 							<table id ="MyAnnAreaTable" class="table table-bordered">
 								<tbody>
 									<tr>
@@ -59,7 +62,7 @@
 					<div class="card-header py-3 d-flex justify-content-between align-items-center" style="background-color: #f3f4f7;">
 						<h6 class="m-0 font-weight-bold">사원연차내역</h6>
 						<div>
-							<button type="button" class="btn btn-primary btn-sm" id="todayAnnButton">오늘 연차자 조회</button>
+							<button type="button" class="btn btn-dark btn-sm" id="todayAnnButton" style=" font-size: 12px;">오늘 연차사원</button>
 						</div>
 					</div>
 					<div class="card-body">
@@ -81,8 +84,8 @@
 	<div class="Annual-container" id="todayAnnModal">
 		<div class="Annual-area">
 			<div class="Annual-header">
-				<div class="Annual-header-title" style="font-weight: 600">오늘 연차자 조회</div>
-				<button class="close-Annual-button"></button>
+				<div class="Annual-header-title" style="font-weight: 600;">오늘 연차사원</div>
+				<i class="fa-solid fa-xmark close-Annual-button"></i>
 			</div>
 			<div class="Annual-body">
 				 <table id="todayAnnTable" class="table"></table>
@@ -101,8 +104,8 @@
 	<script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
 	<script src="https://uicdn.toast.com/chart/latest/toastui-chart.min.js"></script>
 
-	
 	<script src="/bootstrap/js/annual/annual.js"></script>
+	
 </th:block>
 </body>
 </html>
