--- a/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
@@ -42,9 +42,9 @@
 					    <span class="mx-1">~</span>
 					    <input type="date" name="endDate" class="form-control form-control-sm me-4" th:value="${endDate}" style="min-width:80px; margin-right:20px;">
 					
-					    <button type="submit" id="searchBtn" class="btn btn-primary btn-sm me-3" style="min-width:80px; margin-right:240px;">조회</button>
-					    <button id="checkInBtn" class="btn btn-primary btn-sm me-3" style="min-width: 80px; margin-right:100px;">출근</button>
-					    <button id="checkOutBtn" class="btn btn-primary btn-sm" style="min-width: 80px; margin-right:260px;">퇴근</button>
+					    <button type="submit" id="searchBtn" class="btn btn-secondary btn-sm me-3" style="min-width:80px; margin-right:240px;">조회</button>
+					    <button id="checkInBtn" class="btn btn-success btn-sm me-3" style="min-width: 80px; margin-right:100px;">출근</button>
+					    <button id="checkOutBtn" class="btn btn-success btn-sm" style="min-width: 80px; margin-right:260px;">퇴근</button>
 					</div>
 				</div>
 	            <div class="card-body">
