--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -57,6 +57,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1.5.1/dist/sockjs.min.js"></script> <!-- 웹소켓 js -->
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script> <!-- 웹소켓 js -->
 	<script th:src="@{/bootstrap/js/groupware/chat.js}"></script> <!-- 사내메신저관련 js -->
+	<script th:src="@{/bootstrap/js/groupware/privateChat.js}"></script> <!-- 1:1메신저관련 js -->
 
 	<!-- 개별 페이지 자바스크립트 영역 -->
 	<th:block layout:fragment="script"></th:block>
