--- a/bootstrap_stater/src/main/resources/templates/gw/privateChat.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/privateChat.html
@@ -32,5 +32,9 @@
 			</form>
 		</div>
 	</th:block>
+	
+	 <th:block layout:fragment="script">
+        <script th:src="@{/bootstrap/js/groupware/privateChat.js}"></script>
+    </th:block>
 </body>
 </html>
