--- a/bootstrap_stater/src/main/resources/templates/gw/document.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/document.html
@@ -31,7 +31,8 @@
 						<table class="table table-bordered" id="documentTable" width="100%" cellspacing="0">
 							<thead>
 								<tr>
-									<th>문서 종류</th>
+									<th>업무 구분</th>
+									<th>양식 종류</th>
 									<th>제목</th>
 									<th>작성자</th>
 									<th>작성일</th>
@@ -39,7 +40,8 @@
 							</thead>
 							<tbody>
 								<tr th:each="doc : ${documents}">
-									<td th:text="${doc.doctypename}">보고서</td>
+									<td th:text="${doc.doctypename}"></td>
+									<td th:text="${doc.ReqType.label}"></td>
 									<td>
 										<a th:href="@{/groupware/docView/{docId}(docId=${doc.docId})}"
 										   th:text="${doc.docTitle}"> 
