--- a/bootstrap_stater/src/main/resources/templates/gw/docView.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/docView.html
@@ -16,66 +16,53 @@
 			<h1 class="h3 mb-4 text-gray-800">사내 공통 문서 양식 상세</h1>
 
 			<div class="card shadow mb-4">
-				<div class="card-body">
-					<div class="mt-4" id="formContainer"></div>
-					<form method="post" th:action="@{/groupware/modify}" th:object="${documentDTO}">
-						<div class="form-group">
-							<label for="templateSelector2">업무 구분</label>
-							<select class="form-control" th:field="*{docType}">
-								<option 
-										th:each="detail : ${dtCodes}"
-										th:value="${detail.comDtId}"
-										th:text="${detail.comDtNm}"
-										>
-								</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="templateSelector2">문서 양식 선택</label>
-							<select class="form-control" th:field="*{reqType}">
-								<option 
-										th:each="reqType : ${T(com.bootstrap.study.approval.constant.ApprReqType).values()}"
-										th:value="${reqType}"
-										th:text="${reqType.label}"
-										>
-								</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="docTitle">제목</label>
-							<input type="text" th:field="*{docTitle}" id="docTitle" class="form-control"/>
-						</div>
-						<div class="form-group">
-							<label for="summernote">내용</label>
-							<textarea th:field="*{docContent}" id="summernote" class="form-control"></textarea>
-						</div>
-						<a href="/groupware/document" class="btn btn-primary">목록으로</a>
-						<!-- 본인 및 관리자만 수정 가능 -->
-						<!-- <button type="submit" class="btn btn-primary">수정</button> -->
-					</form>
+				<div class="card-body" th:object="${documentDTO}">
+					<!-- <input type="hidden" th:field="*{docId}"> -->
+					<div class="form-group">
+						<label for="templateSelector2">업무 구분</label>
+						<select class="form-control" th:field="*{docType}" disabled>
+							<option 
+									th:each="detail : ${dtCodes}"
+									th:value="${detail.comDtId}"
+									th:text="${detail.comDtNm}"
+									>
+							</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="templateSelector2">문서 양식 선택</label>
+						<select class="form-control" th:field="*{reqType}" disabled>
+							<option 
+									th:each="reqType : ${T(com.bootstrap.study.approval.constant.ApprReqType).values()}"
+									th:value="${reqType}"
+									th:text="${reqType.label}"
+									>
+							</option>
+						</select>
+					</div>
+					<div class="form-group">
+					  <label for="docTitle">제목</label>
+					  <div th:text="*{docTitle}" id="docTitle" class="h5 text-dark font-weight-bold"></div>
+					</div>
+					<div class="form-group">
+					  <label for="docContentView">내용</label>
+					  <div id="docContentView" th:utext="*{docContent}" class="border rounded p-3 bg-white text-body" style="min-height: 200px;"></div>
+					</div>
+					<div class="d-flex justify-content-end w-100">
+					  <a href="/groupware/document" class="btn btn-primary mr-2">목록으로</a>
+					  <a class="btn btn-danger" id="modify-btn" th:href="@{/groupware/docWirte/{docId}(docId=${documentDTO.docId})}">수정</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</th:block>
-
-<th:block layout:fragment="script">
-	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-	<script>
-		$('#summernote').summernote({
-			tabsize: 2,
-			height: 200,
-			focus: true,
-			toolbar: [
-				['style', ['style']],
-				['font', ['bold', 'underline', 'clear']],
-				['color', ['color']],
-				['para', ['ul', 'ol', 'paragraph']],
-				['table', ['table']],
-				['insert', ['link']],
-				['view', ['fullscreen', 'codeview', 'help']]
-			]
-		});
-	</script>
-</th:block>
+	<th:block layout:fragment="script">
+		<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+		<script>
+		
+			
+			
+		</script>
+	</th:block>
 </body>
 </html>
