--- a/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
@@ -49,7 +49,12 @@
 							<label for="summernote">내용</label>
 							<textarea th:field="*{docContent}" id="summernote" class="form-control"></textarea>
 						</div>
-						<button type="submit" class="btn btn-primary">등록</button>
+						<div class="d-flex justify-content-end w-100">
+						  <a href="/groupware/document" class="btn btn-primary mr-2">목록으로</a>
+						  
+						  <button type="submit" class="btn btn-primary" th:if="${documentDTO.docID == null}">등록</button>
+						  <a class="btn btn-danger" id="modify-btn" th:href="@{/groupware/docWirte/{docId}(docId=${documentDTO.docId})}" th:if="${documentDTO.docID != null}">수정</a>
+						</div>
 					</form>
 				</div>
 			</div>
