페이지 분리 및 첨부파일 저장 까지는 완료

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -92,7 +92,7 @@
 										<!-- ******************첨부파일*************************-->
 										<td rowspan="3" class="text-center">
 											<div class="photo-wrapper-regist">
-												<input class="form-control" type="file" id="emp_pi" name="file1" onchange="employeePhoto(event);">
+												<input class="form-control" type="file" id="emp_pi" name="empImg" onchange="employeePhoto(event);">	<!-- name 명 변경 -->
 											</div>
 										</td>
 
