--- a/bootstrap_stater/src/main/resources/templates/commute/commute_data_log_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/commute_data_log_list.html
@@ -64,7 +64,7 @@
 		                            <th>삭제자(관리자)</th>
 		                            <th>삭제사유</th>
 		                            <th>대상자</th>
-		                            <th>상세조회</th>
+		                            <th style="width: 110px;">상세조회</th>
 		                        </tr>
 	                        </thead>
 	                        <tbody>
