groupware 사내메신저까지 완료 1:1메신저 추가 작업중

--- a/bootstrap_stater/src/main/resources/templates/gw/chat.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/chat.html
@@ -18,6 +18,7 @@
 					placeholder="메시지를 입력하세요..." autocomplete="off">
 				<div class="input-group-append">
 					<button type="submit" class="btn btn-primary">보내기</button>
+					<button type="button" id="leaveChatBtn" class="btn btn-secondary">나가기</button>
 				</div>
 			</form>
 		</div>
